tests/errors/mutability/test_tc_mut_02_compound_assign.pc
#import std.io;
int main() {
    int x = 5;
    x += 1;
    return 0;
}
